--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>"A Batchelor of Science in Information Technology student. I'm passionate about tech and fascinated by its potential. Currently studying at Punyashlok Ahilyadevi Holkar Solapur University, I'm skilled in web development and have worked on exciting projects like data structures visualization."</p>
+          <p>"A Batchelor of Science in Information Technology student. I'm passionate about tech and fascinated by its potential. Currently studying at Phinma Araullo University."</p>
           </div>
         <div class="profile">
         <div class="row">
